refactor code and add exception